--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
+    "multer": "^1.4.5-lts.1",
     "otp-generator": "^4.0.1",
     "unirest": "^0.6.0",
     "winston": "^3.12.0"
