--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^7.1.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "otp-generator": "^4.0.1",
+    "socket.io": "^4.7.5",
     "unirest": "^0.6.0",
     "winston": "^3.12.0"
   }
