--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URL="mongodb://127.0.0.1:32132/planttttApp"
-JWT_PRIVATE_KEY="af298cd99699e358"
+MONGO_URL=""
+JWT_PRIVATE_KEY=""
 PORT=3500
 FAST2SMS_API_KEY=""
-RESET_TOKEN_SECRET_KEY="fds3vds34fsd"
+RESET_TOKEN_SECRET_KEY=""
